--- a/.monaca/project_info.json
+++ b/.monaca/project_info.json
@@ -1,14 +1,33 @@
 {
     "plugins": [
-        "mobi.monaca.plugins.Monaca"
+        "mobi.monaca.plugins.Monaca@3.0.0"
     ],
     "framework_version": "3.5",
-    "xcode_version": "6",
-    "cordova_version": "5.2",
-    "plugin_settings": [],
+    "xcode_version": "7",
+    "cordova_version": "6.2",
+    "plugin_settings": {
+        "cordova-plugin-crosswalk-webview": {
+            "variables": [
+                "XWALK_VERSION=18.48.477.13"
+            ]
+        }
+    },
     "external_plugins": [
-        "cordova-plugin-whitelist@1.0.0",
-        "cordova-plugin-splashscreen@2.1.0",
-        "ncmb-push-monaca-plugin@2.0.1"
-    ]
+        "cordova-plugin-whitelist@1.2.2",
+        "cordova-plugin-splashscreen@3.2.2",
+        "ncmb-push-monaca-plugin@2.0.2",
+        "cordova-custom-config@2.0.3"
+    ],
+    "title-ja": "",
+    "title-en": "",
+    "description-ja": "",
+    "description-en": "",
+    "category": "User Template",
+    "platform": [
+        "android",
+        "ios",
+        "winrt",
+        "chrome"
+    ],
+    "name": "generated-1476017853-57f27a73fd1734db06b6b07a"
 }
