画像の追加 home.htmlからおきにを削除 write.htmlのスタイル変更

--- a/.monaca/project_info.json
+++ b/.monaca/project_info.json
@@ -24,10 +24,7 @@
     "description-en": "",
     "category": "User Template",
     "platform": [
-        "android",
-        "ios",
-        "winrt",
-        "chrome"
+        "ios"
     ],
-    "name": "generated-1476017853-57f27a73fd1734db06b6b07a"
+    "name": "generated-1479223367-57f27a73fd1734db06b6b07a"
 }
